# plugins

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
cmake/: FindFFMPEG.cmake  FindPapillon.cmake  Library.cmake
extra/: buildFFmpegOnCentos.sh  buildFFmpegOnDebian.sh
video/: CMakeLists.txt
video/FFmpeg/: CMakeLists.txt  PFFmpegInputStreamHandler.h  PFFmpegStreamHandler.h  PFFmpegUtility.h  documentation.h  pluginInputVideoStreamFFmpeg.cpp  pluginOutputVideoStreamFFmpeg.cpp
video/FFmpeg/wrapper/: PFFmpegInputStreamHandler.h  PFFmpegOutputStreamHandler.h  PFFmpegStreamHandler.h  PFFmpegUtility.h
video/VLC/: DocIVSVLC.h  pluginInputVideoStreamVLC.cpp
